src/objects/BGBK__Receipt_Refund__c.object
<CustomObject>
    <fields>
        <fullName>BGBK__Amount__c</fullName>
        <description>Refunded amount from the related receipt.</description>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BGBK__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this field if the refund is coming from a deposit.</description>
        <label>Deposit</label>
        <referenceTo>MUSW__Deposit__c</referenceTo>
        <relationshipLabel>Receipt Refunds</relationshipLabel>
        <relationshipName>Receipt_Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>MUSW__Receipt__c</referenceTo>
        <relationshipLabel>Receipt Refunds</relationshipLabel>
        <relationshipName>Receipt_Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Refund2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a refund record.</description>
        <label>Refund</label>
        <referenceTo>BGBK__Refund2__c</referenceTo>
        <relationshipLabel>Receipt Refunds</relationshipLabel>
        <relationshipName>Receipt_Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refund_Type__c</fullName>
        <formula>IF(ISBLANK( BGBK__Refund2__r.Fee__c ), &apos;Suspense&apos;, &apos;Allocation&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refund Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refundee__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+BGBK__Refund2__r.BGBK__Contact__r.Id , BGBK__Refund2__r.BGBK__Contact__r.LastName + &quot;, &quot;+  BGBK__Refund2__r.BGBK__Contact__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refundee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Receipt Refund</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Receipt Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipt Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>